--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
-MONGODB_URL=mongodb://127.0.0.1:27017/movie888
+MONGODB_URL=mongodb+srv://api-main-v1:api-main-v1.@api-main.keahv.mongodb.net/
 PORT=5000
 TOKEN_SECRET=yourrandomsecret
 TMDB_BASE_URL=https://api.themoviedb.org/3
-TMDB_KEY=1cc28d7cb8202fa7566afa90c4a8b9f4
+TMDB_KEY=13913c53a36e953e48d5e757b1d6c5a9
